* 2007-07-30 - marcus.klein@open-xchange.com

 - Bugfix #7377. Fixed update of tasks to prevent loss of folder mappings.
 - Bugfix #8351. Server now runs with AggressiveHeap memory option.
 - Bugfix #8106. Startup order of JMX and ConfigDB fixed to get ConfigDB into
   monitoring.

* 2007-07-27 ben.pahne@open-xchange.com

 - Fixed bug #7936, a lot of typos and text corrections

* 2007-07-25 - martin.kauss@open-xchange.com

 - Fixed bug #8482. If an appoinment with an enabled private flag was moved
   to a shared folder, no error message was shown. This has been fixed.

* 2007-07-25 ben.pahne@open-xchange.com

 - Bugfix 7368, changed a message status from error to info
 - Bugfix 7771, changed the SQL query for a linkage list
 - Bugfix 8417, changed the error message of a exception
 - Bugfix 8420, a connection handling problem

* 2007-07-23 - marcus.klein@open-xchange.com

 - Improved SQL command when listing deleted tasks.
 - Removed Suns BASE64 en/decoder.

* 2007-07-23 - martin.kauss@open-xchange.com
 
 - Fixed bug #8490. The wrong folder was send to the client if a shared folder
   was requested but the current user was also a participant in an appointment.
   This has been fixed.

* 2007-07-23 - marcus.klein@open-xchange.com

 - Added config tree setting fastgui.
 - Bugfix #8427: Removing files if storing them fails.

* 2007-07-20 - thorben.betten@open-xchange.com

 - Bugfix #8491: Allowing sharing of default folders (if owner still holds
   full rights on modified ACL list)
 - Fixed subfolder display on shared IMAP folders: A folder that was
   previously shared and subscribed but now does no more grant rights for
   affected user still occurs in user's subscription list (LSUB command).
   This is fixed now.
 - Added an own implementation of org.json.JSONWriter that uses real objects
   instead of a java.io.Writer

* 2007-07-19 - francisco.laguna@open-xchange.com

 - Fixed build.xml to also copy subdirectories of the configuration.
